--- a/web/src/style/components/_rankable-topics.scss
+++ b/web/src/style/components/_rankable-topics.scss
@@ -2,7 +2,6 @@
 
 .rankable-topics {
   padding-bottom: $size-xs;
-  overflow-y: auto;
 
   &__topic {
     margin: $size-xs $size-xs 0 $size-xs;
